[tool.poetry]
name = "rc35h"
version = "0.1.0"
description = "Python RCE Shell"
authors = ["Sergey M <tz4678@gmail.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pysocks = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rc35h = "rc35h:main"
